# KeySlop

./: .gitignore  Cargo.toml  README.md
.kiro/hooks/: cross-platform-check.kiro.hook
src/: app.rs  audio.rs  autostart.rs  config.rs  listener.rs  main.rs  tray.rs
